add node-webkit support

--- a/index.html
+++ b/index.html
@@ -25,17 +25,14 @@
     <body>
 
         <div id="navigation">
-            <a class="brand" href="http://pegjs.majda.cz/">
-                <span class="peg">PEG.js</span> &ndash; Grammar Editor
+            <a class="brand" target="_blank" href="http://peg.arcanis.fr/">
+                <span class="peg">PEG Editor</span>
             </a>
             <ul class="actions">
                 <li><a ng-click="export()">Export</a></li>
+                <li><a ng-click="debug()">Debug</a></li>
+                <li><a ng-click="exit()">Exit</a></li>
             </ul>
-            <div class="copy">
-                <a href="https://arcanis.fr/posts/weekly-side-project-1-pegjs-editor.html">[ About ]</a><br />
-                PEG.js &copy; <a href="http://majda.cz/en/">David Majda</a> &ndash; 2012<br />
-                Editor &copy; <a href="http://arcanis.fr">Maël Nison</a> &ndash; 2013
-            </div>
         </div>
 
         <div id="content">
